# vectorsearch

./: .env.example  .gitignore  AGENTS.md  PROJECT_CURRENT.md  PROJECT_PROGRESS_AND_NEXT_PLAN.md  PROJECT_ROADMAP_STATUS.md  README.md  docker-compose.yml  pyproject.toml
airflow/dags/: ko_unstructured_v2_data_engineering.py
chunking_list/: 2026-06-08.md  2026-06-09.md  2026-06-10.md  2026-06-11.md  2026-06-12.md  2026-06-13.md  2026-06-18.md  2026-06-19.md  2026-06-22.md  2026-06-23.md  2026-06-24.md  2026-06-25.md  2026-06-27.md
configs/: contextual_chunks.yaml  contextual_subset_bge_m3.yaml  contextual_subset_e5.yaml  default.yaml  e5_prefix.yaml  embedding_aware.yaml  field_chunks.yaml  ticket_columns.yaml
experiments/: project_registry.yaml
experiments/ko_dense_technical_v3/: TEST_CASE_MANAGEMENT.md  test_cases.yaml
experiments/ko_dense_technical_v3/configs/: baseline_fixed_512.yaml  baseline_page_subchunk.yaml  baseline_section.yaml  tokenizer_aware_fixed_512.yaml
experiments/ko_unstructured_v2/: OFFICE_PDF_STATUS.md  PROJECT_PLAN.md
experiments/ko_unstructured_v2/configs/: cleaned.yaml  contextual_chunks.yaml  normalized.yaml  pdf_contextual.yaml  pdf_fixed.yaml  pdf_oracle.yaml  pdf_page.yaml  pdf_structure.yaml  raw.yaml
reports/: data_dashboard_guide.md  data_engineering_portfolio_case_study.md  data_pipeline_operational_review.md  experiment_report.md  failure_analysis.md  ko_dense_technical_v3_hybrid_candidate_failure_analysis.md  ko_dense_technical_v3_hybrid_tuning.md  ko_dense_technical_v3_pilot_qaset_improvement.md  ko_dense_technical_v3_pilot_qaset_review.md  ko_dense_technical_v3_pilot_to_full_execution_status.md  ko_dense_technical_v3_preprocessing_ab_test.md  ko_dense_technical_v3_project_proposal.md  ko_dense_technical_v3_qaset_balanced_review.md  ko_dense_technical_v3_qaset_canonical_reviewed.md  ko_dense_technical_v3_qaset_generation_strategy.md  ko_dense_technical_v3_qaset_hard_negative_review.md  ko_dense_technical_v3_qaset_late_evidence_review.md  ko_dense_technical_v3_qaset_low_lexical_overlap_review.md  ko_dense_technical_v3_qaset_protocol_comparison.md  ko_dense_technical_v3_qaset_protocol_retrieval_comparison.md  ko_dense_technical_v3_qaset_protocol_review_comparison.md  ko_dense_technical_v3_qaset_section_balanced_review.md  ko_dense_technical_v3_smoke_retrieval_eval.md  smoke_run.md  validation_eval_report.md  vector_quality_diagnosis.md
reports/ko_unstructured_v2/: chunking_analysis.md  data_engineering_dashboard_guide.md  data_parsing_chunking_vector_schema_v1.md  data_processing_spec_v2.md  data_quality_report.md  full_golden_set_review.md  full_retrieval_experiment.md  opensearch_qdrant_inventory_and_operations.md  pdf_parsing_quality.md  rag_evaluation.md  retrieval_experiment.md
scripts/: project-env.ps1  run-office-full-golden.ps1  run-office-full-index.ps1  run-office-full-parse.ps1  start-ollama-project.ps1
src/koreanops_rag/: __init__.py  config.py  dashboard.py  io.py  observability.py  schemas.py  text.py
src/koreanops_rag/documents/: __init__.py  build_documents.py  chunk_documents.py  contextual_chunks.py
tests/: test_build_eval_subset.py  test_chunk_documents.py  test_contextual_chunks.py  test_dashboard.py  test_documents.py  test_fusion.py  test_llm_provider.py  test_load_tickets.py  test_metrics.py  test_observability.py  test_office_chunking.py  test_office_de_mart.py  test_office_de_quality.py  test_office_de_spark.py  test_office_golden_review.py  test_office_inventory.py  test_office_parsing.py  test_office_quality.py  test_office_rag_eval.py  test_office_retrieval_eval.py  test_project_isolation.py  test_text.py  test_v3_academic_papers.py  test_v3_chunking.py  test_v3_preprocessing.py  test_v3_qaset_protocols.py  test_v3_qaset_review.py  test_v3_reconstruction.py  test_v3_retrieval_eval.py  test_v3_runner.py  test_v3_test_cases.py  test_vector_cache_env.py
(+72 files in other folders)
